--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,16 @@
   "extends": ["eslint:recommended", "plugin:react/recommended", "prettier"],
   "overrides": [],
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "ecmaVersion": "latest",
     "sourceType": "module"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   },
   "plugins": ["react"],
   "rules": {
