--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "prettier": "prettier -w ."
   },
   "dependencies": {
+    "@expo-google-fonts/raleway": "^0.2.2",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
     "expo": "~46.0.16",
+    "expo-font": "^10.2.1",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
