--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@expo-google-fonts/raleway": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "date-fns": "^2.29.3",
     "expo": "~46.0.16",
     "expo-font": "^10.2.1",
+    "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.13.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-encrypted-storage": "^4.0.2",
     "react-native-paper": "^4.12.5",
     "styled-components": "^5.3.6"
   },
