--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@expo-google-fonts/raleway": "^0.2.2",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
+    "@reduxjs/toolkit": "^1.8.6",
     "date-fns": "^2.29.3",
     "expo": "~46.0.16",
     "expo-font": "^10.2.1",
     "expo-secure-store": "~11.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.13.0",
-    "react": "18.0.0",
-    "react-native": "0.69.6",
+    "react": "^18.0.0",
+    "react-native": "^0.69.6",
     "react-native-paper": "^4.12.5",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
@@ -33,7 +37,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.31.10",
     "husky": "^8.0.1",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "redux-logger": "^3.0.6"
   },
   "private": true
 }
