--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.13.0",
     "react": "^18.0.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-native": "^0.69.6",
     "react-native-paper": "^4.12.5",
     "react-native-safe-area-context": "^4.4.1",
